apps/media/pinchflat/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pinchflat
spec:
  selector:
    app: pinchflat
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
